--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,109 @@ html body {
 }
 
 /*Global/Base styling*/
+
+html {
+    font-family: 'Yu Gothic';
+    font-weight: normal;
+    font-size: 18px;
+}
+
+.title {
+    font-family: 'BoldBrush';
+    font-size: 2rem;
+}
+
+
+
+/*Header*/
+
+header {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    border-bottom: 2px solid #88C8EC;
+    position: fixed;
+    top: 0px;
+    z-index: 10;
+}
+
+.headLeft {
+    width: 300px;
+    display: flex;
+    justify-content: flex-start;
+    column-gap: 1.5rem;
+}
+
+
+.headLeft h2 strong {
+    color: #88C8EC;
+}
+
+nav {
+    width: 600px;
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 0.85rem;
+    font-weight: bold;
+    margin-right: 20px;
+    
+}
+
+nav a {
+    text-decoration: none;
+    color: black;
+    padding: 10px 20px;
+}
+
+nav a:hover {
+    color: #88C8EC;
+}
+
+nav a:focus {
+    color: #a8a8a8;
+}
+
+nav .kickoff {
+    color: black;
+    padding: 10px 20px;
+    background-color: #88C8EC;
+    border-radius: 25px;
+
+}
+
+nav .kickoff:hover {
+    background-color: #d7b3ff;
+    color: black;
+}
+
+/*Banner*/
+
+.banner {
+    position: relative;
+    top: 77px;
+    width: 100%;
+    height: 870px;
+    background-image: url(/images/WhitBluecracks.jpg);
+    background-size: cover;
+    display: flex;
+    justify-content: space-around;
+}
+
+@media only screen and (max-width: 1530px;) {
+    
+}
+
+.banner h1 {
+    width: 45%;
+    font-family: 'BoldBrush';
+    font-size: 6rem;
+    text-align: center;
+    align-self: center;
+    background-image: url(/images/Code.png);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+}
