--- a/styles.css
+++ b/styles.css
@@ -2,39 +2,39 @@
 
 @font-face {
     font-family: 'BoldBrush';
-    src: url('/Fonts/BoldBrush.eot');
-    src: url('/Fonts/BoldBrush.woff2') format('woff2'),
-         url('/Fonts/BoldBrush.woff') format('woff'),
-         url('/Fonts/BoldBrush.ttf') format('truetype'),
-         url('/Fonts/BoldBrush.svg#svgBoldBrush') format('svg');
+    src: url('./Fonts/BoldBrush.eot');
+    src: url('./Fonts/BoldBrush.woff2') format('woff2'),
+         url('./Fonts/BoldBrush.woff') format('woff'),
+         url('./Fonts/BoldBrush.ttf') format('truetype'),
+         url('./Fonts/BoldBrush.svg#svgBoldBrush') format('svg');
 }
 @font-face {
     font-family: 'Yu Gothic';
-    src: url('/Fonts/YuGothicUI-Regular.eot');
-    src: url('/Fonts/YuGothicUI-Regular.woff2') format('woff2'),
-         url('/Fonts/YuGothicUI-Regular.woff') format('woff'),
-         url('/Fonts/YuGothicUI-Regular-02.ttf') format('truetype'),
-         url('/Fonts/YuGothicUI-Regular.svg#svgYuGothic') format('svg');
+    src: url('./Fonts/YuGothicUI-Regular.eot');
+    src: url('./Fonts/YuGothicUI-Regular.woff2') format('woff2'),
+         url('./Fonts/YuGothicUI-Regular.woff') format('woff'),
+         url('./Fonts/YuGothicUI-Regular-02.ttf') format('truetype'),
+         url('./Fonts/YuGothicUI-Regular.svg#svgYuGothic') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'Yu Gothic';
-    src: url('/Fonts/YuGothicUI-Light.eot');
-    src: url('/Fonts/YuGothicUI-Light.woff2') format('woff2'),
-         url('/Fonts/YuGothicUI-Light.woff') format('woff'),
-         url('/Fonts/YuGothicUI-Light-02.ttf') format('truetype'),
-         url('/Fonts/YuGothicUI-Light.svg#svgYuGothic') format('svg');
+    src: url('./Fonts/YuGothicUI-Light.eot');
+    src: url('./Fonts/YuGothicUI-Light.woff2') format('woff2'),
+         url('./Fonts/YuGothicUI-Light.woff') format('woff'),
+         url('./Fonts/YuGothicUI-Light-02.ttf') format('truetype'),
+         url('./Fonts/YuGothicUI-Light.svg#svgYuGothic') format('svg');
     font-weight: 300;
     font-style: normal;
 }
 @font-face {
     font-family: 'Yu Gothic';
-    src: url('YuGothic-Bold.eot.eot');
-    src: url('/Fonts/YuGothic-Bold.woff2') format('woff2'),
-         url('/Fonts/BoldBrush.woff') format('woff'),
-         url('/Fonts/YuGothic-Bold-01.ttf') format('truetype'),
-         url('/Fonts/YuGothic-Bold.svg#svgYuGothic') format('svg');
+    src: url('./Fonts/YuGothic-Bold.eot');
+    src: url('./Fonts/YuGothic-Bold.woff2') format('woff2'),
+         url('./Fonts/BoldBrush.woff') format('woff'),
+         url('./Fonts/YuGothic-Bold-01.ttf') format('truetype'),
+         url('./Fonts/YuGothic-Bold.svg#svgYuGothic') format('svg');
     font-weight: bold;
     font-style: normal;
 }
@@ -136,15 +136,15 @@ nav .kickoff:hover {
     top: 77px;
     width: 100%;
     height: 870px;
-    background-image: url(/images/WhitBluecracks.jpg);
+    background-image: url(./images/WhitBluecracks.jpg);
     background-size: cover;
     display: flex;
     justify-content: space-around;
 }
 
-@media only screen and (max-width: 1530px;) {
+/*@media only screen and (max-width: 1530px;) {
     
-}
+}*/
 
 .banner h1 {
     width: 45%;
@@ -152,7 +152,7 @@ nav .kickoff:hover {
     font-size: 6rem;
     text-align: center;
     align-self: center;
-    background-image: url(/images/Code.png);
+    background-image: url(./images/Code.png);
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
