About Us Section

--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,11 @@ html {
     font-size: 2rem;
 }
 
+strong {
+    font-family: 'Yu Gothic';
+    font-weight: bold;
+}
+
 
 
 /*Header*/
@@ -80,6 +85,7 @@ header {
     z-index: 10;
 }
 
+
 .headLeft {
     width: 300px;
     display: flex;
@@ -89,6 +95,7 @@ header {
 
 
 .headLeft h2 strong {
+    font-family: 'BoldBrush';
     color: #88C8EC;
 }
 
@@ -140,6 +147,7 @@ nav .kickoff:hover {
     background-size: cover;
     display: flex;
     justify-content: space-around;
+    
 }
 
 /*@media only screen and (max-width: 1530px;) {
@@ -156,4 +164,42 @@ nav .kickoff:hover {
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
+}
+
+/*About Us*/
+
+.about {
+    width: 100%;
+    height: 870px;
+    display: flex;
+    margin-top: 79px;
+    align-self: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.us {
+    font-size: 3rem;
+    width: 100%;
+    align-self: flex-start;
+    text-align: center;
+    margin-top: 100px;
+    
+}
+
+.weAre {
+    width: 30%;
+    height: 350px;
+    margin-bottom: 400px;
+    text-align: left;
+    line-height: 1.8rem;
+    align-self: center;
+}
+
+.weCreate {
+    width: 30%;
+    font-size: 2rem;
+    text-align: center;
+    align-self: center;
+    margin-bottom: 400px;
 }
