--- a/style.css
+++ b/style.css
@@ -68,7 +68,17 @@ strong {
     font-weight: bold;
 }
 
+.page {
+    display: flex;
+    flex-direction: column;
+    column-width: 100%;
+}
 
+.pageitem {
+    width: 100%;
+    height: 800px;
+    justify-content: center;
+}
 
 /*Header*/
 
@@ -84,7 +94,6 @@ header {
     top: 0px;
     z-index: 10;
 }
-
 
 .headLeft {
     width: 300px;
@@ -141,18 +150,12 @@ nav .kickoff:hover {
 .banner {
     position: relative;
     top: 77px;
-    width: 100%;
-    height: 870px;
     background-image: url(./images/WhitBluecracks.jpg);
     background-size: cover;
     display: flex;
     justify-content: space-around;
     
 }
-
-/*@media only screen and (max-width: 1530px;) {
-    
-}*/
 
 .banner h1 {
     width: 45%;
@@ -170,7 +173,6 @@ nav .kickoff:hover {
 
 .about {
     width: 100%;
-    height: 870px;
     display: flex;
     margin-top: 79px;
     align-self: center;
@@ -189,7 +191,6 @@ nav .kickoff:hover {
 
 .weAre {
     width: 30%;
-    height: 350px;
     margin-bottom: 400px;
     text-align: left;
     line-height: 1.8rem;
@@ -202,4 +203,8 @@ nav .kickoff:hover {
     text-align: center;
     align-self: center;
     margin-bottom: 400px;
+    padding: 10%;
+    background-image: url(./images/coloursBG.png);
+    background-size: cover;
+    border-radius: 2rem;
 }
