--- a/style.css
+++ b/style.css
@@ -214,12 +214,15 @@ nav .kickoff:hover {
 
 .work {
     width: 100%;
+    height: 900px;
     display: flex;
     align-self: center;
-    justify-content: space-around;
+    vertical-align: middle;
+    justify-content: space-between;
     flex-wrap: wrap;
     position: relative;
     top: 100px;
+    overflow: hidden;
 }
 
 .our {
@@ -228,4 +231,45 @@ nav .kickoff:hover {
     align-self: flex-start;
     text-align: center;
     margin-top: 100px;
+}
+
+.work-p {
+    width: 90%;
+    text-align: center;
+    margin: 0 auto;
+    position: relative;
+    top: -50px;
+}
+
+.workimages {
+    width: 85%;
+    height: 500px;
+    display: flex;
+    flex-basis: 85%;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    row-gap: 2rem;
+    margin: 0 auto;
+}
+
+.workitem {
+    flex-shrink: 1;
+    height: 40%;
+    border-radius: 2rem;
+}
+
+.workitem:hover {
+    height: 60%;
+    transition: 50ms;
+}
+
+/*Our faces*/
+
+.faces {
+    position: relative;
+    top: 100px;
+    width: 100%;
+    display: flex;
+
+    justify-content: space-around;
 }
