--- a/style.css
+++ b/style.css
@@ -214,11 +214,11 @@ nav .kickoff:hover {
 
 .work {
     width: 100%;
-    height: 900px;
+    height: 1400px;
     display: flex;
     align-self: center;
     vertical-align: middle;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     position: relative;
     top: 100px;
@@ -237,29 +237,41 @@ nav .kickoff:hover {
     width: 90%;
     text-align: center;
     margin: 0 auto;
+    
+}
+
+.work-p-small {
+    width: 90%;
+    text-align: center;
+    align-self: center;
     position: relative;
-    top: -50px;
+    top: 40px;
+    margin: 0 auto;
+    font-size: 0.80rem;
+    font-weight: bold;
 }
 
 .workimages {
     width: 85%;
-    height: 500px;
+    max-width: 1000px;
+    height: 900px;
     display: flex;
     flex-basis: 85%;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    align-content: center;
     row-gap: 2rem;
-    margin: 0 auto;
+    margin: 6.5% auto;
 }
 
 .workitem {
     flex-shrink: 1;
-    height: 40%;
+    width: 35%;
     border-radius: 2rem;
 }
 
 .workitem:hover {
-    height: 60%;
+    width: 60%;
     transition: 50ms;
 }
 
