--- a/style.css
+++ b/style.css
@@ -45,9 +45,8 @@ html body {
     margin:0;
     padding:0;
     border:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
+    vertical-align: baseline;
+    background: transparent;
 }
 
 /*Global/Base styling*/
@@ -268,6 +267,7 @@ nav .kickoff:hover {
     flex-shrink: 1;
     width: 35%;
     border-radius: 2rem;
+    transition: 500ms;
 }
 
 .workitem:hover {
@@ -284,12 +284,14 @@ nav .kickoff:hover {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
+    
 }
 
 .face-title {
     width: 100%;
     text-align: center;
     font-size: 3rem;
+    margin-top: 100px;
 }
 
 .face-item {
@@ -311,10 +313,19 @@ nav .kickoff:hover {
 .face-item h3 {
     width: 100%;
     text-align: center;
+    font-size: 2rem;
 }
 
 .face-item p {
-    width: 100%;
+    width: 90%;
     text-align: center;
     line-height: 1.8rem;
+    margin: 0 auto;
+}
+
+/*Contact*/
+
+.contact {
+    position: relative;
+    top: 200px;
 }
