--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ strong {
     display: flex;
     flex-direction: column;
     column-width: 100%;
+    justify-content: space-evenly;
 }
 
 .pageitem {
@@ -213,7 +214,7 @@ nav .kickoff:hover {
 
 .work {
     width: 100%;
-    height: 1400px;
+    height: fit-content;
     display: flex;
     align-self: center;
     vertical-align: middle;
@@ -292,20 +293,20 @@ nav .kickoff:hover {
 /*Our faces*/
 
 .faces {
-    position: relative;
-    top: 0px;
     width: 100%;
+    height: fit-content;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
-    
+    position: relative;
+    top: 100px;
 }
 
 .face-title {
     width: 100%;
     text-align: center;
     font-size: 3rem;
-    margin-top: 100px;
+    
 }
 
 .face-item {
@@ -340,20 +341,22 @@ nav .kickoff:hover {
 /*Contact*/
 
 .contact {
-    position: relative;
-    top: 100px;
     display: flex;
     width: 90%;
+    height: fit-content;
     margin: 0 auto;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    row-gap: 5px;
+    justify-content: space-around;
+    position: relative;
+    top: 100px;
 }
 
 .contact-us {
     width: 100%;
     text-align: center;
     height: fit-content;
+    font-size: 3rem;
+    align-self: flex-start;
 }
 
 .we-have {
@@ -361,7 +364,7 @@ nav .kickoff:hover {
     height: fit-content;
     text-align: center;
     position: relative;
-    top: -100px;
+    top: -40px;
 }
 
 .contact img{
@@ -372,13 +375,16 @@ nav .kickoff:hover {
 
 .contact-right {
     width: 45%;
+    height: 400px;
     display: flex;
     justify-content: space-evenly;
+    align-content: center;
     flex-wrap: wrap;
 }
 
 .contact-right h3 {
     width: 100%;
+    height: fit-content;
     text-align: center;
     vertical-align: middle;
 }
@@ -422,7 +428,31 @@ nav .kickoff:hover {
 
 footer {
     position: relative;
-    top: 100px;
+    top: 150px;
+    height: 500px;
     overflow: hidden;
     background-color: #88C8EC;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.footer-img {
+    height: 200px;
+}
+
+.logo {
+    width: 400px;
+    display: inline-flex;
+    column-gap: 20px;
+    align-self: flex-start;
+}
+
+.logo img {
+    height: 100px;
+}
+
+.logo h2 {
+    width: fit-content;
+    color: white;
 }
