--- a/style.css
+++ b/style.css
@@ -197,10 +197,12 @@ nav .kickoff:hover {
 
 .weCreate {
     width: 30%;
+    max-width: 410px;
+    max-height: 450px;
     font-size: 2rem;
     text-align: center;
     align-self: center;
-    padding: 10%;
+    padding: 130px;
     background-image: url(./images/coloursBG.png);
     background-size: cover;
     border-radius: 2rem;
@@ -302,7 +304,7 @@ nav .kickoff:hover {
     width: 100%;
     text-align: center;
     font-size: 3rem;
-    
+    margin-top: 100px;
 }
 
 .face-item {
@@ -317,6 +319,7 @@ nav .kickoff:hover {
 
 .face-item img {
     width: 40%;
+    max-width: 400px;
     margin: 0 auto;
     border-radius: 50%;
 }
@@ -353,6 +356,7 @@ nav .kickoff:hover {
     height: fit-content;
     font-size: 3rem;
     align-self: flex-start;
+    margin-top: 100px;
 }
 
 .we-have {
@@ -365,6 +369,7 @@ nav .kickoff:hover {
 
 .contact img{
     width: 45%;
+    max-width: 520px;
     height: fit-content;
     vertical-align: middle;
 }
@@ -376,7 +381,7 @@ nav .kickoff:hover {
     justify-content: space-evenly;
     align-content: center;
     flex-wrap: wrap;
-    row-gap: 10px;
+    row-gap: 20px;
 }
 
 .contact-right h3 {
@@ -445,6 +450,13 @@ nav .kickoff:hover {
     transition: 500ms;
 }
 
+@media only screen and (min-width: 1131px) {
+    .contact-right {
+        position: relative;
+        top: 50px;
+        max-width: 670px;
+    }
+}
 
 /*Footer*/
 
@@ -460,7 +472,7 @@ footer {
 }
 
 .footer-img {
-    height: 200px;
+    height: 210px;
 }
 
 .logo {
