--- a/style.css
+++ b/style.css
@@ -101,12 +101,17 @@ header {
     display: flex;
     justify-content: flex-start;
     column-gap: 1.5rem;
+    z-index: 10;
 }
 
 
 .headLeft h2 strong {
     font-family: 'BoldBrush';
     color: #88C8EC;
+}
+
+.mobile {
+    display: none;
 }
 
 nav {
@@ -144,6 +149,149 @@ nav .kickoff {
 nav .kickoff:hover {
     background-color: #d7b3ff;
     color: black;
+}
+
+@media only screen and (max-width: 1000px)  {
+    .desktop {
+        display: none;
+    }
+
+    .mobile {
+        display: contents;
+    }
+
+    .nav {
+        width: 100%;
+      }
+      
+      
+      #menuToggle {
+        display: block;
+        position: absolute;
+        top:  40px;
+        margin: 0 auto;
+        width: 100%;
+        z-index: 1;
+        -webkit-user-select: none;
+        user-select: none;
+        
+      }
+      
+      
+      
+      
+      #menuToggle a {
+        text-decoration: none;
+        color: black;
+        
+        transition: color 0.3s ease;
+      }
+      
+      #menuToggle li:hover {
+        color: #88C8EC;
+      }
+      
+      
+      #menuToggle input {
+        display: block;
+        width: 40px;
+        height: 32px;
+        position: relative;
+        top: -10px;
+        left: 88%;
+        
+        cursor: pointer;
+        
+        opacity: 0;
+        z-index: 2; 
+        
+        -webkit-touch-callout: none;
+      }
+      
+      
+      #menuToggle span {
+        display: block;
+        width: 25px;
+        height: 2px;
+        margin-bottom: 5px;
+        position: relative;
+        left: 90%;
+        top: -35px;
+        background: black;
+        border-radius: 3px;
+        
+        z-index: 1;
+        
+        transform-origin: 4px 0px;
+        
+        transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                    background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                    opacity 0.55s ease;
+      }
+      
+      #menuToggle span:first-child {
+        transform-origin: 0% 0%;
+      }
+      
+      #menuToggle span:nth-last-child(2) {
+        transform-origin: 0% 100%;
+      }
+      
+      #menuToggle input:checked ~ span {
+        opacity: 1;
+        transform: rotate(45deg) translate(-2px, -1px);
+        background: #232323;
+      }
+      
+      #menuToggle input:checked ~ span:nth-last-child(3) {
+        opacity: 0;
+        transform: rotate(0deg) scale(0.2, 0.2);
+      }
+      
+      #menuToggle input:checked ~ span:nth-last-child(2) {
+        transform: rotate(-45deg) translate(1px, -1px);
+      }
+      
+      #menu {
+        position: absolute;
+        top: 10%;
+        left: 20px;
+        width: 100%;
+        margin: -100px 0 0 -50px;
+        padding-top: 125px;
+        padding-bottom: 50px;
+        text-align: center;
+      
+        background: white;
+        list-style-type: none;
+        -webkit-font-smoothing: antialiased;
+        
+        
+        transform-origin: 0% 0%;
+        transform: translate(-100%, 0);
+        
+        transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+      }
+      
+      
+      
+      #menu li {
+        position: relative;
+        width: 230px;
+        margin: 5px auto;
+        padding: 10px 0;
+        font-size: 22px;
+        font-family: "Yu Gothic";
+        color: #060123;
+      }
+      
+      #menu .top-space {
+        margin-top: 30%;
+      }
+      
+      #menuToggle input:checked ~ ul {
+        transform: none;
+      }
 }
 
 /*Banner*/
@@ -504,4 +652,203 @@ footer li a:hover {
 .copyrite {
     position: relative;
     top: 165px;
+}
+
+/*Responsive Breakpoints*/
+
+@media only screen and (max-width: 529px) {
+
+    /*Banner*/
+
+    .banner h1 {
+        font-size: 3.5rem;
+        text-align: left;
+        width: 80%;
+    }
+
+    .banner {
+        height: 500px;
+    }
+
+    /*About us*/
+
+    .us {
+        font-size: 2.5rem;
+        width: 100%;
+        margin-top: 60px;
+    }
+    .weAre {
+        width: 80%;
+    }
+    
+    .weCreate {
+        width: 75%;
+        padding: 10px;
+    }
+
+    /*Our work*/
+
+    .our {
+        font-size: 2.5rem;
+        margin-top: 60px;
+    }
+
+    .work-p {
+        width: 80%;
+        text-align: left;
+
+    }
+
+    .work-p-small {
+        display: none;
+    }
+
+    .workimages {
+        width: 80%;
+        height: 1800px;
+    }
+
+    .workitem {
+        
+        width: 100%;
+        border-radius: 2rem;
+        transition: 500ms;
+    }
+
+    .workitem:hover {
+        width: 100%;
+    }
+
+    /*Our faces*/
+
+    .face-title {
+        font-size: 2.5rem;
+        margin-top: 60px;
+    }
+    
+    .face-item {
+        width: 80%;
+    }
+    
+    
+    .face-item h3 {
+        width: 100%;
+        text-align: center;
+        font-size: 1.5rem;
+    }
+    
+    .face-item p {
+        width: 80%;
+        text-align: left;
+    }
+
+    /*Contact*/
+
+    .contact {
+        width: 80%;
+    }
+    
+    .contact-us {
+        font-size: 2.5rem;
+        margin-top: 60px;
+    }
+    
+    .contact img{
+        width: 80%;
+    }
+    
+    .contact-right {
+        width: 100%
+    }
+
+    /*footer*/
+}
+
+@media only screen and (max-width: 400px) {
+    .workimages {
+        height: 1400px;
+    }
+}
+
+@media only screen and (max-width: 430px) and (min-width: 401px) {
+    .workimages {
+        height: 1500px;
+    }
+}
+
+@media only screen and (max-width: 480px) and (min-width: 431px) {
+    .workimages {
+        height: 1650px;
+    }
+}
+
+
+@media only screen and (max-width: 600px) and (min-width: 530px) {
+
+    /*Banner*/
+
+    .banner h1 {
+        font-size: 5rem;
+        text-align: left;
+        width: 75%;
+    }
+
+    .banner {
+        height: 600px;
+    }
+
+    /*About us*/
+
+    /*Our work*/
+
+    /*Our faces*/
+
+    /*Contact*/
+}
+
+
+@media only screen and (max-width: 800px) and (min-width: 601px) {
+
+    /*Banner*/
+
+    .banner h1 {
+        font-size: 5rem;
+        text-align: center;
+        width: 75%;
+    }
+
+    .banner {
+        height: 600px;
+    }
+
+    /*About us*/
+
+    /*Our work*/
+
+    /*Our faces*/
+
+    /*Contact*/
+}
+
+@media only screen and (max-width: 1000px) and (min-width: 801px) {
+
+    /*Banner*/
+
+    .banner h1 {
+        font-size: 6rem;
+        text-align: center;
+        width: 75%;
+    }
+
+    .banner {
+        height: 800px;
+    }
+
+    /*About us*/
+
+    /*Our work*/
+
+    /*Our faces*/
+
+    /*Contact*/
 }
